bug fix and readme